manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: week-9-1027-service
  namespace: develop
spec:
  selector:
    app: week-9-1027
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
